Made dashboard ui and api to save image

--- a/UserManagementUI/src/app/shared/header/header.component.html
+++ b/UserManagementUI/src/app/shared/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Integrity Solution</a>
+    <div class="ml-auto">
+      <span>Hi, {{ userName }} 👋</span>
+      <img src="../../../assets/Images/ProfilePic.png" alt="User Avatar" class="rounded-circle ml-2" width="30" height="30">
+    </div>
+  </nav>
