--- a/UserManagementUI/src/app/shared/sidebar/sidebar.component.html
+++ b/UserManagementUI/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,24 @@
-<p>sidebar works!</p>
+<div class="sidebar-sticky">
+    <ul class="nav flex-column">
+      <li class="nav-item" *ngFor="let item of menuItems">
+        <a class="nav-link" [routerLink]="item.route" routerLinkActive="active">
+          <i class="bi {{ item.icon }}"></i>
+          {{ item.label }}
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- <div class="col-md-3 bg-primary text-white p-4">
+    <h2>Integrity Solution</h2>
+    <ul class="nav flex-column">
+      <li class="nav-item"><a class="nav-link text-white" href="#">Dashboard</a></li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#" data-toggle="collapse" data-target="#manageUserSubmenu">
+          Manage User <i class="fa fa-caret-down"></i>
+        </a>
+        <ul class="collapse list-unstyled" id="manageUserSubmenu">
+          <li><a class="nav-link text-white" href="#">Add User</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div> -->
