--- a/UserManagementUI/src/app/user/add-user/add-user.component.html
+++ b/UserManagementUI/src/app/user/add-user/add-user.component.html
@@ -12,6 +12,8 @@
           <div class="card-body">
             <h5 class="card-title">User Detail</h5>
             <hr class="mt-2 mb-4">
+            
+            <!-- Image Upload Section -->
             <div class="upload-section">
               <div class="upload-placeholder" (click)="fileInput.click()">
                 <img *ngIf="imagePreview" [src]="imagePreview" alt="User image">
@@ -25,167 +27,91 @@
                 <button type="button" class="btn btn-sm btn-primary mt-2" (click)="fileInput.click()">Browse</button>
               </div>
             </div>
+
+            <!-- User Details -->
             <div class="row">
-              <div class="col-md-4 mb-3">
-                <label for="firstName">First Name</label>
-                <input type="text" class="form-control" id="firstName" formControlName="firstName"
-                  placeholder="First Name">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="middleName">Middle Name</label>
-                <input type="text" class="form-control" id="middleName" formControlName="middleName"
-                  placeholder="Middle Name">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" id="lastName" formControlName="lastName"
-                  placeholder="Last Name">
+              <div *ngFor="let field of ['firstName', 'middleName', 'lastName']" class="col-md-4 mb-3">
+                <label [for]="field">{{field | titlecase}}</label>
+                <input type="text" class="form-control" [id]="field" [formControlName]="field" [placeholder]="field | titlecase">
               </div>
             </div>
+
             <div class="row">
               <div class="col-md-4 mb-3">
                 <label for="gender">Gender</label>
                 <select class="form-control" id="gender" formControlName="gender">
                   <option value="">Select</option>
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                  <option value="other">Other</option>
+                  <option *ngFor="let option of ['male', 'female', 'other']" [value]="option">{{option | titlecase}}</option>
                 </select>
               </div>
-              <div class="col-md-4 mb-3">
-                <label for="dateOfBirth">Date of Birth</label>
-                <input type="date" class="form-control" id="dateOfBirth" formControlName="dateOfBirth">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email">
+              <div *ngFor="let field of ['dateOfBirth', 'email']" class="col-md-4 mb-3">
+                <label [for]="field">{{field | titlecase}}</label>
+                <input [type]="field === 'email' ? 'email' : 'date'" class="form-control" [id]="field" [formControlName]="field" [placeholder]="field | titlecase">
               </div>
             </div>
+
             <div class="row">
-              <div class="col-md-4 mb-3">
-                <label for="dateOfJoining">Date of Joining</label>
-                <input type="date" class="form-control" id="dateOfJoining" formControlName="dateOfJoining">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="phone">Phone</label>
-                <input type="tel" class="form-control" id="phone" formControlName="phone" placeholder="Phone">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="alternatePhone">Alternate Phone</label>
-                <input type="tel" class="form-control" id="alternatePhone" formControlName="alternatePhone"
-                  placeholder="Alternate Phone">
+              <div *ngFor="let field of ['dateOfJoining', 'phone', 'alternatePhone']" class="col-md-4 mb-3">
+                <label [for]="field">{{field | titlecase}}</label>
+                <input [type]="field.includes('phone') ? 'tel' : 'date'" class="form-control" [id]="field" [formControlName]="field" [placeholder]="field | titlecase">
               </div>
             </div>
 
+            <!-- Address Section -->
             <div formArrayName="addresses">
-              <!-- Primary Address -->
-              <div [formGroupName]="0">
-                <h5 class="mt-4">Primary Address</h5>
-                <div class="row">
-                  <div class="col-md-12 mb-3">
-                    <label for="address0">Address</label>
-                    <input type="text" class="form-control" id="address0" formControlName="address"
-                      placeholder="Address">
+              <ng-container *ngFor="let address of addressesFormArray.controls; let i = index">
+                <div [formGroupName]="i">
+                  <h5 class="mt-4">{{i === 0 ? 'Primary' : 'Secondary'}} Address</h5>
+                  <div class="row">
+                    <div class="col-md-12 mb-3">
+                      <label [for]="'address' + i">Address</label>
+                      <input type="text" class="form-control" [id]="'address' + i" formControlName="address" placeholder="Address">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div *ngFor="let field of ['country', 'state', 'city']" class="col-md-4 mb-3">
+                      <label [for]="field + i">{{field | titlecase}}</label>
+                      <select class="form-control" [id]="field + i" [formControlName]="field + 'Id'">
+                        <option value="">Select</option>
+                        <option *ngFor="let item of getLocationData(field, i)" [value]="item.id">{{item.name}}</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4 mb-3">
+                      <label [for]="'zipCode' + i">Zip Code</label>
+                      <input type="text" class="form-control" [id]="'zipCode' + i" formControlName="zipCode" placeholder="Zip Code">
+                    </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-4 mb-3">
-                    <label for="country0">Country</label>
-                    <select class="form-control" id="country0" formControlName="countryId">
-                      <option value="">Select</option>
-                      <option *ngFor="let country of countries" [value]="country.id">{{ country.name }}</option>
-                    </select>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                    <label for="state0">State</label>
-                    <select class="form-control" id="state0" formControlName="stateId">
-                      <option value="">Select</option>
-                      <option *ngFor="let state of getStates(0)" [value]="state.id">{{ state.name }}</option>
-                    </select>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                    <label for="city0">City</label>
-                    <select class="form-control" id="city0" formControlName="cityId">
-                      <option value="">Select</option>
-                      <option *ngFor="let city of getCities(0)" [value]="city.id">{{ city.name }}</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-4 mb-3">
-                    <label for="zipCode0">Zip Code</label>
-                    <input type="text" class="form-control" id="zipCode0" formControlName="zipCode"
-                      placeholder="Zip Code">
-                  </div>
-                </div>
-              </div>
-
-              <!-- Checkbox for Secondary Address -->
-              <div class="form-check mb-3">
-                <input type="checkbox" class="form-check-input" id="showSecondaryAddress"
-                  (change)="toggleSecondaryAddress($event)">
-                <label class="form-check-label" for="showSecondaryAddress">Add Secondary Address</label>
-              </div>
-
-              <!-- Secondary Address -->
-              <div [formGroupName]="1" *ngIf="showSecondaryAddress">
-                <h5 class="mt-4">Secondary Address</h5>
-                <div class="row">
-                  <div class="col-md-12 mb-3">
-                    <label for="address1">Address</label>
-                    <input type="text" class="form-control" id="address1" formControlName="address"
-                      placeholder="Address">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-4 mb-3">
-                    <label for="country0">Country</label>
-                    <select class="form-control" id="country0" formControlName="countryId">
-                      <option value="">Select</option>
-                      <option *ngFor="let country of countries" [value]="country.id">{{ country.name }}</option>
-                    </select>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                    <label for="state0">State</label>
-                    <select class="form-control" id="state0" formControlName="stateId">
-                      <option value="">Select</option>
-                      <option *ngFor="let state of getStates(1)" [value]="state.id">{{ state.name }}</option>
-                    </select>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                    <label for="city0">City</label>
-                    <select class="form-control" id="city0" formControlName="cityId">
-                      <option value="">Select</option>
-                      <option *ngFor="let city of getCities(1)" [value]="city.id">{{ city.name }}</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-4 mb-3">
-                    <label for="zipCode1">Zip Code</label>
-                    <input type="text" class="form-control" id="zipCode1" formControlName="zipCode"
-                      placeholder="Zip Code">
-                  </div>
-                </div>
-              </div>
+              </ng-container>
             </div>
 
+            <!-- Secondary Address Checkbox -->
+            <div class="form-check mb-3" *ngIf="!showSecondaryAddress">
+              <input type="checkbox" class="form-check-input" id="showSecondaryAddress" (change)="toggleSecondaryAddress($event)">
+              <label class="form-check-label" for="showSecondaryAddress">Add Secondary Address</label>
+            </div>
+
+            <!-- Active/Inactive Checkbox -->
             <div class="form-check mb-3">
               <input type="checkbox" class="form-check-input" id="isActive" formControlName="isActive">
               <label class="form-check-label" for="isActive">Inactive</label>
             </div>
-            <div class="row mt-4">
-              <div class="col-10">
 
-              </div>
+            <!-- Submit Button -->
+            <div class="row mt-4">
+              <div class="col-10"></div>
               <div class="col">
-                <button type="submit" class="btn btn-primary btn-md  px-5">Save</button>
+                <button type="submit" class="btn btn-primary btn-md px-5" [disabled]="userForm.invalid">Save</button>
               </div>
             </div>
-
           </div>
         </div>
       </form>
     </div>
   </div>
 </div>
+
+<p>{{ userForm.value | json }}</p>
+<p>{{ userForm.valid | json }}</p>
