--- a/UserManagementUI/src/app/shared/header/header.component.html
+++ b/UserManagementUI/src/app/shared/header/header.component.html
@@ -1,12 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Integrity Solution</a>
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" (click)="toggleSidebar()">
+    <span class="navbar-toggler-icon"></span>
+  </button>
   <span>Hi, {{ userName }} 👋</span>
   <span style="flex: 1 1 auto;"></span>
   <div class="ml-auto">
-    <div class="rounded-circle p-1 border img-wrapper">
-      <img src={{imagePath}} alt="User Avatar" class="w-100 h-100">
+    <div class="dropdown">
+      <div class="rounded-circle p-1 border img-wrapper" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img [src]="imagePath" alt="User Avatar" class="w-100 h-100">
+      </div>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+        <a class="dropdown-item" [routerLink]="['/user/change-password']">Change Password</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
     </div>
     <span>{{userName}}</span>
-
   </div>
-</nav>
+</nav> -->
+<!-- header.component.html -->
+<header>
+  <div class="left">
+    <button class="menu-toggle" (click)="onToggleSidebar()">☰</button>
+    <span>Hi, {{ userName }} 👋</span>
+  </div>
+  <div class="right">
+    <div class="profile-info" (click)="toggleProfileDropdown($event)">
+      <img [src]="imagePath" alt="User" class="user-image">
+      <span class="user-name">{{userName}}</span>
+      <div class="dropdown-menu" *ngIf="isProfileDropdownOpen">
+        <a href="#" (click)="changePassword($event)">Change Password</a>
+        <a href="#" (click)="logout($event)">Logout</a>
+      </div>
+    </div>
+  </div>
+</header>
