refined header, sidebar, auth module

--- a/UserManagementUI/src/app/auth/change-password/change-password.component.html
+++ b/UserManagementUI/src/app/auth/change-password/change-password.component.html
@@ -1,19 +1,34 @@
 <!-- change-password.component.html -->
 <div class="container">
-    <h2>Change Password</h2>
-    <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="currentPassword">Current Password</label>
-        <input type="password" id="currentPassword" formControlName="currentPassword" class="form-control" required>
+  <h2>Change Password</h2>
+  <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="currentPassword">Current Password</label>
+      <div class="password-input-group">
+        <input [type]="currentPasswordVisible ? 'text' : 'password'" id="currentPassword" formControlName="currentPassword" class="form-control" required>
+        <span class="password-toggle">
+          <i [ngClass]="currentPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="currentPasswordVisible = !currentPasswordVisible"></i>
+        </span>
       </div>
-      <div class="form-group">
-        <label for="newPassword">New Password</label>
-        <input type="password" id="newPassword" formControlName="newPassword" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="newPassword">New Password</label>
+      <div class="password-input-group">
+        <input [type]="newPasswordVisible ? 'text' : 'password'" id="newPassword" formControlName="newPassword" class="form-control" required>
+        <span class="password-toggle">
+          <i [ngClass]="newPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="newPasswordVisible = !newPasswordVisible"></i>
+        </span>
       </div>
-      <div class="form-group">
-        <label for="confirmNewPassword">Confirm New Password</label>
-        <input type="password" id="confirmNewPassword" formControlName="confirmNewPassword" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="confirmNewPassword">Confirm New Password</label>
+      <div class="password-input-group">
+        <input [type]="confirmNewPasswordVisible ? 'text' : 'password'" id="confirmNewPassword" formControlName="confirmNewPassword" class="form-control" required>
+        <span class="password-toggle">
+          <i [ngClass]="confirmNewPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="confirmNewPasswordVisible = !confirmNewPasswordVisible"></i>
+        </span>
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!changePasswordForm.valid">Change Password</button>
-    </form>
-  </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!changePasswordForm.valid">Change Password</button>
+  </form>
+</div>
