--- a/UserManagementUI/src/app/auth/forgot-password/forgot-password.component.html
+++ b/UserManagementUI/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,12 +1,7 @@
-<div class="container-fluid">
-  <div class="row">
-    <!-- Left side with illustration -->
-    <div class="col-md-6 illustration-column">
-      <img src="../../../assets/Images/login.png" alt="sidebanner_image" style="position: relative;">
-    </div>
+
 
     <!-- Right side with login form -->
-    <div class="col-md-6 login-column">
+    <div class="login-column">
       <div class="login-form-container">
         <h1 *ngIf="!isEmailSent" class="logo text-center">Logo</h1>
         <div class="card p-4 card-wrapper">
@@ -45,5 +40,3 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
