--- a/UserManagementUI/src/app/auth/reset-password/reset-password.component.html
+++ b/UserManagementUI/src/app/auth/reset-password/reset-password.component.html
@@ -1,22 +1,27 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6 image-container">
-      <div class="background-image"></div>
-      <img src="../../../assets/Images/login.png" alt="Overlay" class="overlay-image">
-    </div>
-    <div class="col-md-6 form-container">
+
+    <div class="form-container">
       <h2>Reset Password</h2>
       <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
         <div class="mb-3">
           <label for="password" class="form-label">New Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password">
+          <div class="password-input-group">
+            <input [type]="passwordVisible ? 'text' : 'password'" class="form-control" id="password" formControlName="password">
+            <span class="password-toggle">
+              <i [ngClass]="passwordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="passwordVisible = !passwordVisible"></i>
+            </span>
+          </div>
           <div *ngIf="resetForm.get('password')!.invalid && resetForm.get('password')!.touched" class="text-danger">
             Password must be at least 8 characters long.
           </div>
         </div>
         <div class="mb-3">
           <label for="confirmPassword" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword">
+          <div class="password-input-group">
+            <input [type]="confirmPasswordVisible ? 'text' : 'password'" class="form-control" id="confirmPassword" formControlName="confirmPassword">
+            <span class="password-toggle">
+              <i [ngClass]="confirmPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="confirmPasswordVisible = !confirmPasswordVisible"></i>
+            </span>
+          </div>
           <div *ngIf="resetForm.get('confirmPassword')!.hasError('passwordMismatch')" class="text-danger">
             Passwords do not match.
           </div>
@@ -26,5 +31,3 @@
         </button>
       </form>
     </div>
-  </div>
-</div>
