--- a/UserManagementUI/src/app/auth/reset-password/reset-password.component.scss
+++ b/UserManagementUI/src/app/auth/reset-password/reset-password.component.scss
@@ -45,3 +45,23 @@
       max-height: 80%;
     }
   }
+
+  .password-input-group {
+    position: relative;
+  }
+  
+  .password-toggle {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
+  .password-toggle i {
+    font-size: 18px;
+  }
+  
+  .form-control {
+    padding-right: 40px; /* add some space for the toggle icon */
+  }
