--- a/UserManagementUI/src/app/auth/login/login.component.scss
+++ b/UserManagementUI/src/app/auth/login/login.component.scss
@@ -1,77 +1,53 @@
-  .container-fluid, .row {
-      height: 100vh;
-    }
-    
-    .illustration-column {
-      background-image: url("../../../assets/Images/Group.png");
-      background-repeat: no-repeat;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+.login-form-container {
+  width: 100%
+}
 
-    .card-wrapper{
-      border-color: white ;
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    }
+.card-wrapper {
+  width: 100%;
+  border-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 
-    .placeholder-image {
-      width: 100%;
-      height: 300px;
-      background-color: rgba(255, 255, 255, 0.2);
-      border-radius: 10px;
-      background-image: url('../../../assets/Images/Group.png');
-    }
-    
-    .login-column {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    .login-form-container {
-      width: 80%;
-      max-width: 400px;
-    }
-    
-    .logo {
 
-      margin-bottom: 40px;
-    }
-    
-    .sign-in-header {
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
 
-    
-    .password-input-group {
-      position: relative;
-    }
-    
-    .password-toggle {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      cursor: pointer;
-    }
-    
-    .btn-primary {
-      background-color: #3498db;
-      border-color: #3498db;
-    }
-    
-    .btn-primary:hover {
-      background-color: #2980b9;
-      border-color: #2980b9;
-    }
-    .forgot-password-link {
-      color: #3498db;
-      text-decoration: none;
-    }
-    
-    .forgot-password-link:hover {
-      text-decoration: underline;
-    }
+.logo {
+
+  margin-bottom: 40px;
+}
+
+.sign-in-header {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+
+.password-input-group {
+  position: relative;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #3498db;
+  border-color: #3498db;
+}
+
+.btn-primary:hover {
+  background-color: #2980b9;
+  border-color: #2980b9;
+}
+
+.forgot-password-link {
+  color: #3498db;
+  text-decoration: none;
+}
+
+.forgot-password-link:hover {
+  text-decoration: underline;
+}
